force-app/main/default/objects/Account/fields/Account_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Account_Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Subsidiary</label>
    <referenceTo>AccountSubsidiary__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>