force-app/main/default/objects/Account/fields/AccountOwnerActive__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerActive__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Active</label>
    <type>Checkbox</type>
</CustomField>