force-app/main/default/objects/Account/fields/AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerID__c</fullName>
    <formula>CASESAFEID(Owner.Id)</formula>
    <label>Account - Owner: ID</label>
    <type>Text</type>
</CustomField>