force-app/main/default/objects/Account/fields/AccountScore__c.field-meta.xml
<CustomField>
    <fullName>AccountScore__c</fullName>
    <label>Account Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>