force-app/main/default/objects/Account/fields/AccountSubIdCheck__c.field-meta.xml
<CustomField>
    <fullName>AccountSubIdCheck__c</fullName>
    <formula>AND(
Account_Subsidiary__r.NetsuiteInternalId__c !=  NetsuiteInternalId__c,
ISBLANK(Account_Subsidiary__r.NetsuiteInternalId__c			),
NOT(ISBLANK(NetsuiteInternalId__c			))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountSubIdCheck</label>
    <type>Checkbox</type>
</CustomField>