force-app/main/default/objects/Account/fields/AccountSubsidiaryNSId__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiaryNSId__c</fullName>
    <formula>Account_Subsidiary__r.NetsuiteInternalId__c</formula>
    <label>Account Subsidiary NS Id</label>
    <type>Text</type>
</CustomField>