force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>Individual or Company used by NetSuite</description>
    <formula>IF(ISPICKVAL(AuthorType__c,&quot;Individual&quot;),&quot;Individual&quot;, &quot;Company&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>