force-app/main/default/objects/Account/fields/AgodiExternVolgNrVP__c.field-meta.xml
<CustomField>
    <fullName>AgodiExternVolgNrVP__c</fullName>
    <description>Used for matching of Vestigingsplaatsen (in the VestigingsPlaatsen file this is the column EDISON_volgnr_vpl)</description>
    <inlineHelpText>Used for matching of Vestigingsplaatsen (in the VestigingsPlaatsen file this is the column EDISON_volgnr_vpl)</inlineHelpText>
    <label>Agodi Extern volg Nr VP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>