force-app/main/default/objects/Account/fields/AgodiUpdateInProgress__c.field-meta.xml
<CustomField>
    <fullName>AgodiUpdateInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agodi update in progress</label>
    <type>Checkbox</type>
</CustomField>