force-app/main/default/objects/Account/fields/AgodiVestigingseenheidsnummer__c.field-meta.xml
<CustomField>
    <fullName>AgodiVestigingseenheidsnummer__c</fullName>
    <label>Agodi Vestigingseenheidsnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>