force-app/main/default/objects/Account/fields/AllowedReturnPercentage__c.field-meta.xml
<CustomField>
    <fullName>AllowedReturnPercentage__c</fullName>
    <inlineHelpText>This field is for partners that have an agreed return percentage for the yearly returns. Percentage in this field is used to impact the yearly revenue expectation.</inlineHelpText>
    <label>Allowed Return %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>