force-app/main/default/objects/Account/fields/authorFirstName__c.field-meta.xml
<CustomField>
    <fullName>authorFirstName__c</fullName>
    <description>First Name field to be used on the Author record type</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>