force-app/main/default/objects/Account/fields/authorLastName__c.field-meta.xml
<CustomField>
    <fullName>authorLastName__c</fullName>
    <description>Last Name field to be used on the Author record type</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>