force-app/main/default/objects/Account/fields/authorMiddleName__c.field-meta.xml
<CustomField>
    <fullName>authorMiddleName__c</fullName>
    <description>Middle Name field to be used on the Author record type</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>