force-app/main/default/objects/Account/fields/AuthorType__c.field-meta.xml
<CustomField>
    <fullName>AuthorType__c</fullName>
    <label>Author Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>