force-app/main/default/objects/Account/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <summarizedField>AccountSubsidiary__c.Balance__c</summarizedField>
    <summaryFilterItems>
        <field>AccountSubsidiary__c.Deleted__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AccountSubsidiary__c.IsInactive__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountSubsidiary__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>