force-app/main/default/objects/Account/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>ILAddress__c</referenceTo>
    <relationshipLabel>Accounts (Billing Address)</relationshipLabel>
    <relationshipName>BillingAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>