force-app/main/default/objects/Account/fields/BillingAddressNotes__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressNotes__c</fullName>
    <label>Billing Address Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>