force-app/main/default/objects/Account/fields/BillingAddressStatusCode__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressStatusCode__c</fullName>
    <label>Billing Address Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>