force-app/main/default/objects/Account/fields/BillingHouseNumberAddition__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNumberAddition__c</fullName>
    <label>Billing House Number Addition</label>
    <length>20</length>
    <type>Text</type>
</CustomField>