force-app/main/default/objects/Account/fields/BillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>BillingSchedule__c</fullName>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>