force-app/main/default/objects/Account/fields/BillingStreetName__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetName__c</fullName>
    <label>Billing Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>