force-app/main/default/objects/Account/fields/billToAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>billToAttentionOf__c</fullName>
    <inlineHelpText>The person or the agent of the buying comapany responsible for paying the invoices.</inlineHelpText>
    <label>Bill-To Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>