force-app/main/default/objects/Account/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer is blocked for fulfilment/ordering</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>