force-app/main/default/objects/Account/fields/BlockStatus__c.field-meta.xml
<CustomField>
    <fullName>BlockStatus__c</fullName>
    <formula>IF(
		AND( 
    Blocked__c = true,
    ISPICKVAL(BlockReason__c, &apos;Deactivated&apos;)
  ),			
  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
		IF(
			 AND(
      Blocked__c = true,
      ISPICKVAL(BlockReason__c, &apos;Proforma&apos;)
    ),
    IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),  
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;)
		)
)</formula>
    <label>Block Status</label>
    <type>Text</type>
</CustomField>