force-app/main/default/objects/Account/fields/BrinNumber__c.field-meta.xml
<CustomField>
    <fullName>BrinNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>BRIN Number can be used as an external identifier to match school data</description>
    <externalId>true</externalId>
    <label>BRIN Number</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>