force-app/main/default/objects/Account/fields/Casesafe_Id_of_Purchasing_Group__c.field-meta.xml
<CustomField>
    <fullName>Casesafe_Id_of_Purchasing_Group__c</fullName>
    <formula>CASESAFEID( PurchasingGroup__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casesafe Id of Purchasing Group</label>
    <type>Text</type>
</CustomField>