force-app/main/default/objects/Account/fields/Chars__c.field-meta.xml
<CustomField>
    <fullName>Chars__c</fullName>
    <formula>LEN( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>