force-app/main/default/objects/Account/fields/checkLengthLegalName__c.field-meta.xml
<CustomField>
    <fullName>checkLengthLegalName__c</fullName>
    <formula>LEN(FullLegalName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Length Legal Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>