force-app/main/default/objects/Account/fields/CheckRelatedRecords__c.field-meta.xml
<CustomField>
    <fullName>CheckRelatedRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckRelatedRecords</label>
    <type>Checkbox</type>
</CustomField>