force-app/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountClassifications</valueSetName>
    </valueSet>
</CustomField>