force-app/main/default/objects/Account/fields/CoC__c.field-meta.xml
<CustomField>
    <fullName>CoC__c</fullName>
    <description>Chamber of Commerce number for the given account. This is a distinct reference assigned to each individual legal entity.</description>
    <inlineHelpText>Chamber of Commerce number for the given account. This is a distinct reference assigned to each individual legal entity.</inlineHelpText>
    <label>zRemove CoC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>