force-app/main/default/objects/Account/fields/CoCNumber__c.field-meta.xml
<CustomField>
    <fullName>CoCNumber__c</fullName>
    <inlineHelpText>Chamber of Commerce Number</inlineHelpText>
    <label>CoC Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>