force-app/main/default/objects/Account/fields/CommunicationLanguage__c.field-meta.xml
<CustomField>
    <fullName>CommunicationLanguage__c</fullName>
    <defaultValue>IF(OR(ISPICKVAL($User.OperatingCompany__c , &apos;Noordhoff&apos;),ISPICKVAL($User.OperatingCompany__c , &apos;Noordhoff Professional&apos;)), &apos;nl_NL&apos;,
IF(ISPICKVAL($User.OperatingCompany__c , &apos;Liber&apos;), &apos;sv_SE&apos;, &apos;&apos;))</defaultValue>
    <inlineHelpText>All order confirmations, quotes and invoices will be sent based on this language.</inlineHelpText>
    <label>Communication Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communication_Language</valueSetName>
    </valueSet>
</CustomField>