force-app/main/default/objects/Account/fields/CommunityCode__c.field-meta.xml
<CustomField>
    <fullName>CommunityCode__c</fullName>
    <description>(R1-S1 by JD): Community Code.</description>
    <label>Municipality Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>