force-app/main/default/objects/Account/fields/CompanyIndividual__c.field-meta.xml
<CustomField>
    <fullName>CompanyIndividual__c</fullName>
    <formula>IF(OR(ISPICKVAL(AuthorType__c,&quot;Individual&quot;), RecordType.DeveloperName = &quot;B2C_Private_Individuals&quot;), &quot;Individual&quot;, &quot;Company&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company/Individual</label>
    <type>Text</type>
</CustomField>