force-app/main/default/objects/Account/fields/concatenatedLegalName__c.field-meta.xml
<CustomField>
    <fullName>concatenatedLegalName__c</fullName>
    <formula>LegalName__c + &apos; &apos; + LegalName2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zRemoveFull Legal Name</label>
    <type>Text</type>
</CustomField>