force-app/main/default/objects/Account/fields/ConfirmedVisits__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedVisits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Confirmed Qualified Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>