force-app/main/default/objects/Account/fields/ConverseImport__c.field-meta.xml
<CustomField>
    <fullName>ConverseImport__c</fullName>
    <label>Converse Import</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informat Converse migration</fullName>
            </value>
            <value>
                <fullName>Plantyn Converse migration</fullName>
            </value>
            <value>
                <fullName>Agodi import</fullName>
            </value>
            <value>
                <fullName>Averbode import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>