force-app/main/default/objects/Account/fields/CountAccountSubsidiaries__c.field-meta.xml
<CustomField>
    <fullName>CountAccountSubsidiaries__c</fullName>
    <label># Account Subsidiaries</label>
    <summaryForeignKey>AccountSubsidiary__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>