force-app/main/default/objects/Account/fields/CountActiveAccountSubsidiaries__c.field-meta.xml
<CustomField>
    <fullName>CountActiveAccountSubsidiaries__c</fullName>
    <label># Active Account Subsidiaries</label>
    <summaryFilterItems>
        <field>AccountSubsidiary__c.Deleted__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AccountSubsidiary__c.IsInactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountSubsidiary__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>