force-app/main/default/objects/Account/fields/CountOpenOpportunities__c.field-meta.xml
<CustomField>
    <fullName>CountOpenOpportunities__c</fullName>
    <label>#Count Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsOpen__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>