force-app/main/default/objects/Account/fields/CountOpportunities__c.field-meta.xml
<CustomField>
    <fullName>CountOpportunities__c</fullName>
    <label># Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>