force-app/main/default/objects/Account/fields/CountOpportunitiesonParent__c.field-meta.xml
<CustomField>
    <fullName>CountOpportunitiesonParent__c</fullName>
    <formula>Parent.CountOpportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Opportunities - on Parent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>