force-app/main/default/objects/Account/fields/CountOpportunitiesonSchool__c.field-meta.xml
<CustomField>
    <fullName>CountOpportunitiesonSchool__c</fullName>
    <formula>School__r.CountOpportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Opportunities - on School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>