force-app/main/default/objects/Account/fields/CountOrders__c.field-meta.xml
<CustomField>
    <fullName>CountOrders__c</fullName>
    <description>Number of Orders to be populated by a flow</description>
    <label># Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>