force-app/main/default/objects/Account/fields/CountPreferredCouriers__c.field-meta.xml
<CustomField>
    <fullName>CountPreferredCouriers__c</fullName>
    <label># Preferred Couriers</label>
    <summaryForeignKey>PreferredCourier__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>