force-app/main/default/objects/Account/fields/CourierWholeSalerId__c.field-meta.xml
<CustomField>
    <fullName>CourierWholeSalerId__c</fullName>
    <description>The WholeSalerId that&apos;s specific to the selected Courier.</description>
    <label>Courier WholeSalerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>