force-app/main/default/objects/Account/fields/CreditLimitReached__c.field-meta.xml
<CustomField>
    <fullName>CreditLimitReached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreditLimit Reached</label>
    <type>Checkbox</type>
</CustomField>