force-app/main/default/objects/Account/fields/CustomerCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerCategory__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Enterprise Market</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Medical Institution</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Private Individual</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>School Group</fullName>
            </value>
            <value>
                <fullName>Trade Bookstore</fullName>
            </value>
            <value>
                <fullName>Trade Regular</fullName>
            </value>
            <value>
                <fullName>Trade Specialists</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Medical Institution - Care</fullName>
            </value>
            <value>
                <fullName>Medical Institution - Cure</fullName>
            </value>
            <value>
                <fullName>Tender Distributor</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <isActive>false</isActive>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Hospital</fullName>
                <isActive>false</isActive>
                <label>Hospital</label>
            </value>
            <value>
                <fullName>Private Person</fullName>
                <isActive>false</isActive>
                <label>Private Person</label>
            </value>
            <value>
                <fullName>School</fullName>
                <isActive>false</isActive>
                <label>School</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
                <isActive>false</isActive>
                <label>Supplier</label>
            </value>
            <value>
                <fullName>Teacher</fullName>
                <isActive>false</isActive>
                <label>Teacher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>