force-app/main/default/objects/Account/fields/CustomerDiscountGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscountGroup__c</fullName>
    <label>Customer Discount Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CustomerDiscountGroup</valueSetName>
    </valueSet>
</CustomField>