force-app/main/default/objects/Account/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <displayFormat>C-{000000}</displayFormat>
    <label>SF Customer Number</label>
    <type>AutoNumber</type>
</CustomField>