force-app/main/default/objects/Account/fields/CustomerSubcategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubcategory__c</fullName>
    <description>Depends on the Selection of Customer Category</description>
    <inlineHelpText>Select a &apos;Customer Category&apos; for options.</inlineHelpText>
    <label>Customer Subcategory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CustomerCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Addiction Care</fullName>
            </value>
            <value>
                <fullName>Ambulance Dispatch Centre</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Commercial Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Detacheringsbureau</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Disabled Care Sector</fullName>
            </value>
            <value>
                <fullName>Education Management</fullName>
                <isActive>false</isActive>
                <label>Education Management</label>
            </value>
            <value>
                <fullName>Elderly Care</fullName>
            </value>
            <value>
                <fullName>E-Learning</fullName>
                <isActive>false</isActive>
                <label>E-Learning</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <isActive>false</isActive>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Higher Education</fullName>
                <isActive>false</isActive>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>Higher Vocational Education</fullName>
                <isActive>false</isActive>
                <label>Higher Vocational Education</label>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Horeca</fullName>
                <isActive>false</isActive>
                <label>Horeca</label>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <isActive>false</isActive>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Intermediate Vocational Education</fullName>
                <isActive>false</isActive>
                <label>Intermediate Vocational Education</label>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Leisure, Travel &amp; Tourism</fullName>
                <isActive>false</isActive>
                <label>Leisure, Travel &amp; Tourism</label>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
                <isActive>false</isActive>
                <label>Management Consulting</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Maternity Care</fullName>
            </value>
            <value>
                <fullName>Medical Crèche</fullName>
            </value>
            <value>
                <fullName>Mental Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>