force-app/main/default/objects/Account/fields/CustomerSwitchStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerSwitchStatus__c</fullName>
    <description>Temporary field used for migrating customers</description>
    <label>Customer Switch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LMSPhase1</fullName>
                <label>LMS Phase 1</label>
            </value>
            <value>
                <fullName>LMSPhase2</fullName>
                <label>LMS Phase 2</label>
            </value>
            <value>
                <fullName>LMSPhase3</fullName>
                <label>LMS Phase 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>